# lazyenv

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LAUNCH.md  LAUNCH_POSTS.md  LICENSE  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: bench_parser.py
docs/: changelog.md  contributing.md  index.md  roadmap.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: cli.md  diff.md  keybindings.md  tui.md
docs/integration/: ci.md  hooks.md
examples/basic/: .env  .env.example
src/lazyenv/: __init__.py  __main__.py  app.py  diff.py  models.py  parser.py
src/lazyenv/screens/: help.py
src/lazyenv/styles/: main.tcss
src/lazyenv/widgets/: diff_view.py  env_detail.py  file_list.py  status_bar.py
tests/: test_cli.py  test_diff.py  test_parser.py
tests/fixtures/: .env.example  .env.test
